Updated root file

--- a/java-source/Jenkinsfile
+++ b/java-source/Jenkinsfile
@@ -9,7 +9,8 @@ pipeline {
 
       stage ('Checkout SCM'){
         steps {
-          checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[credentialsId: 'git', url: 'https://iwayqtech@bitbucket.org/iwayqtech/devops-pipeline-project.git']]])
+          checkout([$class: 'GitSCM', branches: [[name: '*/master']],
+			userRemoteConfigs: [[url: 'https://github.com/chdattat/jenkinstest.git']]])
         }
       }
 	  
