--- a/java-source/Dockerfile
+++ b/java-source/Dockerfile
@@ -6,7 +6,7 @@ From tomcat:latest
 MAINTAINER "Dattu Chillal - DockerProjetc" 
 
 # copy war file on to container 
-ADD /var/lib/jenkins/workspace/JenkinsTest/java-source/target/iwayQApp-1.0-RELEASE.war	 /usr/local/tomcat/webapps
+ADD **/*.war	 /usr/local/tomcat/webapps
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
